[on-progress] api handler for create a question and its choices
