# internal/response/quiz.go
@@ -5,3 +5,7 @@ import "triva/internal/repository/quizzes"
 type CreateQuizOut struct {
 	Quiz	*quizzes.Quiz	`json:"quiz" form:"quiz"`
 } // @name CreateQuizOut
+
+type CreateQuestionAndChoicesOut struct {
+	Quiz	*quizzes.Quiz	`json:"quiz" form:"quiz"`
+} // @name CreateQuestionAndChoicesOut
